--- a/app/src/main/res/layout/content_checklist.xml
+++ b/app/src/main/res/layout/content_checklist.xml
@@ -19,6 +19,7 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
+        android:singleLine="true"
         android:text="@string/checklist_default_name"
         android:textSize="24sp"
         android:textStyle="bold"/>
