--- a/app/src/main/res/layout/item_checklist.xml
+++ b/app/src/main/res/layout/item_checklist.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:singleLine="true"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:text="@string/checklist_default_item"
