--- a/app/src/main/res/layout/item_checklist.xml
+++ b/app/src/main/res/layout/item_checklist.xml
@@ -1,50 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <net.moltendorf.checklists.ChecklistItemView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="horizontal">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:gravity="center"
+	android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/item_checklist_check_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="12dp"
-        android:paddingLeft="12dp"
-        android:paddingRight="8dp"
-        android:paddingTop="14dp"
-        android:src="@android:drawable/checkbox_off_background"/>
+	<CheckBox
+		android:id="@+id/item_checklist_check_button"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:paddingBottom="12dp"
+		android:paddingRight="4dp"
+		android:paddingTop="14dp"/>
 
-    <net.moltendorf.checklists.CustomEditText
-        android:id="@+id/item_checklist_default_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:singleLine="true"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:text="@string/checklist_default_item"
-        android:textSize="20sp"/>
+	<net.moltendorf.checklists.CustomEditText
+		android:id="@+id/item_checklist_default_item"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_weight="1"
+		android:paddingLeft="8dp"
+		android:paddingRight="8dp"
+		android:singleLine="true"
+		android:text="@string/checklist_default_item"
+		android:textSize="20sp"/>
 
-    <ImageView
-        android:id="@+id/item_checklist_info_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="6dp"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:paddingTop="6dp"
-        android:src="@android:drawable/ic_menu_info_details"/>
+	<ImageView
+		android:id="@+id/item_checklist_info_button"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingBottom="6dp"
+		android:paddingLeft="4dp"
+		android:paddingRight="4dp"
+		android:paddingTop="6dp"
+		android:src="@android:drawable/ic_menu_info_details"/>
 
-    <ImageView
-        android:id="@+id/item_checklist_delete_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="6dp"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:paddingTop="6dp"
-        android:src="@android:drawable/ic_menu_delete"/>
+	<ImageView
+		android:id="@+id/item_checklist_delete_button"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingBottom="6dp"
+		android:paddingLeft="4dp"
+		android:paddingRight="4dp"
+		android:paddingTop="6dp"
+		android:src="@android:drawable/ic_menu_delete"/>
 
 </net.moltendorf.checklists.ChecklistItemView>
